--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 <div class="menus">
                     <div class="menu-box file-drop-menu">
                         <div class="item-box-menu open-zip-mode">Open Zip (To Model)</div>
+                        <div class="item-box-menu open-zip-mode-vmd">Open Zip (To VMD)</div>
                         <div class="item-box-menu open-zip-mode-map">Open Zip (To Map)</div>
+                        <div class="item-box-menu open-zip-mode-file-cam">Open File vmd (camera)</div>
+                        <div class="item-box-menu open-zip-mode-file-mot">Open File (motion)</div>
 
                     </div>
                 </div>
@@ -53,7 +56,7 @@
                             </div>
                             <div class="time-control">
                                 <div class="pri-control">
-                                    <div class="cs-btn play-mode">P</div>
+                                    <div class="cs-btn play-mode" title="Play/Pause Animation">Pause</div>
                                     <div class="cs-btn play-sync">Sync</div>
                                     <div class="cs-btn get-render-image">Screenshot</div>
                                 </div>
@@ -71,7 +74,14 @@
                                 <div class="bar-progress"><div class="prog-bar"></div><div class="overlay"></div></div>
                                 <div class="bar-time-duration">00:00</div>
                             </div>
-
+                            <div class="camera-control">
+                                <div class="pri-control">
+                                    <div class="cs-btn play-mode" title="Play/Pause Camera Animation">Pause</div>
+                                </div>
+                                <div class="sec-control">
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
