--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMD</title>
     <link rel="stylesheet" href="style.css">
-    <script src="lib/jszip.min.js"></script>
-    <script src="lib/jszip.until.js"></script>
+    <script src="lib/jszip/jszip.min.js"></script>
     <script type="module" src="get.js"></script>
     <script src="help.js"></script>
 </head>
