--- a/renderFrame/render.html
+++ b/renderFrame/render.html
@@ -101,7 +101,7 @@
             }
         }
     </script>
-    <script src="ammo.wasm.js"></script>
+    <script src="lib/three/jsm/libs/ammo.wasm.js"></script>
     <script type="module" src="render.js"></script>
 
 </body>
