--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>MMD</title>
     <link rel="stylesheet" href="style.css">
     <script src="lib/jszip/jszip.min.js"></script>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "../lib/three/build/three.module.js",
+                "three/addons/": "../lib/three/jsm/"
+            }
+        }
+    </script>
     <script type="module" src="get.js"></script>
     <script src="help.js"></script>
 </head>
