--- a/renderFrame/render.html
+++ b/renderFrame/render.html
@@ -96,12 +96,12 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "../lib/three/build/three.module.js",
+                "three": "../lib/three/build/r158.js",
                 "three/addons/": "../lib/three/jsm/"
             }
         }
     </script>
-    <script src="lib/three/jsm/libs/ammo.wasm.js"></script>
+    <script src="./lib/three/jsm/libs/ammo.wasm.js"></script>
     <script type="module" src="render.js"></script>
 
 </body>
