--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "../lib/three/build/three.module.js",
+                "three": "../lib/three/build/r158.js",
                 "three/addons/": "../lib/three/jsm/"
             }
         }
