--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "../lib/three/build/r158.js",
-                "three/addons/": "../lib/three/jsm/"
+                "three": "./lib/three/build/r158.js",
+                "three/addons/": "./lib/three/jsm/"
             }
         }
     </script>
