--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="top-bar">
                 <div class="top-bar-list">
                     <div class="top-select open-drop-menu">File</div>
-                    <div class="top-select">Info</div>
+                    <div class="top-select open-mini-info">Info</div>
                     <div class="top-select">Beta</div>
                 </div>
                 <div class="menus">
@@ -35,7 +35,13 @@
                         <div class="item-box-menu open-zip-mode-file-mot">Open File (motion)</div>
 
                     </div>
-
+                    <div class="menu-box info-menu">
+                        <div>This page I code for fun</div>
+                        <div>Maybe hard to use</div>
+                        <div>Some demo on</div>
+                        <div>Github:</div>
+                        <a class="cs-url" href="https://github.com/anhhao00777/MMD-Render-WebGL-Three.js" target="_blank">Repositorie</a>
+                    </div>
 
                 </div>
             </div>
@@ -166,7 +172,20 @@
                     </div>
                 </div>
             </div>
-            <div class="bottom-bar"></div>
+            <div class="bottom-bar">
+                <div class="bottom-left">
+                    <div class="bottom-item -total-err"></div>
+                    <div class="bottom-item -progress-info"></div>
+                    <div class="bottom-item -error-info"></div>
+
+                </div>
+                <div class="bottom-right">
+                    <div class="bottom-item"></div>
+                    <div class="bottom-item -render-size"></div>
+                    <div class="bottom-item -render-fps"></div>
+                    <div class="bottom-item -objects-render"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
