--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="item-box-menu open-file-cam">Open File vmd (camera)</div>
                         <div class="item-box-menu open-file-mot">Open File (motion)</div>
                         <div class="item-box-menu open-file-obj">Open File (.obj)</div>
-                        <div class="item-box-menu open-file-obj">Open File (audio)</div>
+                        <div class="item-box-menu open-file-audio">Open File (audio)</div>
 
                     </div>
                     <div class="menu-box info-menu">
