--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="item-box-menu open-file-cam">Open File vmd (camera)</div>
                         <div class="item-box-menu open-file-mot">Open File (motion)</div>
                         <div class="item-box-menu open-file-obj">Open File (.obj)</div>
-                        <div class="item-box-menu open-file-audio">Open File (audio)</div>
+                        <div class="item-box-menu open-file-obj">Open File (audio)</div>
 
                     </div>
                     <div class="menu-box info-menu">
@@ -66,7 +66,7 @@
                 </div>
                 <div class="render">
                     <div class="render-contaner">
-                        <iframe src="renderFrame/render.html" id="main-render"></iframe>
+                        <iframe src="renderFrame/mmdRender.html" id="main-render"></iframe>
                     </div>
                     <div class="bottom-tool">
                         <div class="time-panel">
@@ -167,7 +167,48 @@
                                     <option value="32:9">32:9</option>
                                     <option value="auto" selected>auto</option>
                                 </select>
-                                
+                                <div class="graph-title">Max FPS</div>
+                                <select class="cs-select-input" id="graph-render-fps">
+                                    <option value="max" selected>MAX</option>
+                                    <option value="40">40</option>
+                                    <option value="30">30</option>
+                                    <option value="20">20</option>
+                                    <option value="10">10</option>
+                                </select>
+                                <div class="graph-title">Outline Effect</div>
+                                <select class="cs-select-input" id="graph-render-outline">
+                                    <option value="on" selected>ON</option>
+                                    <option value="">OFF</option>
+                                </select>
+                                <div class="graph-title">Shadow</div>
+                                <select class="cs-select-input" id="graph-render-shadow">
+                                    <option value="on" selected>ON</option>
+                                    <option value="">OFF</option>
+                                </select>
+                                <div class="graph-title">ColorSpace</div>
+                                <select class="cs-select-input" id="graph-render-colorspace">
+                                    <option value="srgb-linear" selected>LinearSRGBColorSpace</option>
+                                    <option value="srgb">SRGBColorSpace</option>
+                                    <option value="">NoColorSpace</option>
+                                </select>
+                                <div class="graph-title">ToneMapping</div>
+                                <select class="cs-select-input" id="graph-render-mapping">
+                                    <option value="ACESFilmicToneMapping">ACESFilmicToneMapping</option>
+                                    <option value="LinearToneMapping" selected>LinearToneMapping</option>
+                                    <option value="CineonToneMapping">CineonToneMapping</option>
+                                    <option value="ReinhardToneMapping">ReinhardToneMapping</option>
+                                    <option value="NoToneMapping">NoToneMapping</option>
+                                </select>
+                                <div class="graph-title">ToneMapping</div>
+                                <input type="number" id="graph-render-tone-ex" min="0.1" max="3" step="0.1" value="1.1">
+                                <div class="graph-title">Light Type</div>
+                                <select class="cs-select-input" id="graph-render-light">
+                                    <option value="0">Custom</option>
+                                    <option value="1" selected>Light</option>
+                                    <option value="2">Night</option>
+                                </select>
+
+
                                 <h2>For dev:</h2>
                                 <div class="cs-btn reload-all-style">Reload CSS</div>
 
