--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="render">
                     <div class="render-contaner">
-                        <iframe src="renderFrame/mmdRender.html" id="main-render"></iframe>
+                        <iframe src="renderFrame/render.html" id="main-render"></iframe>
                     </div>
                     <div class="bottom-tool">
                         <div class="time-panel">
