--- a/index.html
+++ b/index.html
@@ -148,17 +148,20 @@
                         <div class="list-container">
                             <div class="cont-item -option-show-" id="mesh-view-option"></div>
                             <div class="cont-item" id="graph-render-option">
-                                <div class="graph-title">Qualiti</div>
+                                <div class="graph-title">Quality</div>
                                 <select class="cs-select-input" id="graph-render-qualiti">
                                     <option value="500">500</option>
                                     <option value="720">720</option>
                                     <option value="1080">1080</option>
                                     <option value="auto" selected>auto</option>
                                 </select>
-                                <div class="graph-title">Qualiti +</div>
+                                <div class="graph-title">Quality +</div>
                                 <select class="cs-select-input" id="graph-render-qualiti-plus"><option value="0.5">0.5</option><option value="0.6">0.6</option><option value="0.7">0.7</option><option value="0.8">0.8</option><option value="0.9">0.9</option>
                                     <option value="1" selected>1.0</option>
                                     <option value="1.2">1.2</option><option value="1.4">1.4</option><option value="1.6">1.6</option><option value="1.7">1.7</option><option value="1.8">1.8</option><option value="1.9">1.9</option><option value="2">2.0</option>
+                                    <option value="3">3.0</option>
+                                    <option value="3.5">3.5</option>
+                                    <option value="4">4.0</option>
                                 </select>
                                 <div class="graph-title">Render ratio</div>
                                 <select class="cs-select-input" id="graph-render-ratio">
